# ip_tracker

./: .gitignore  README.md
IP_tracker_client/: CMakeLists.txt  DockerFile  main.cpp
IP_tracker_client/include/: auth_client_impl.h  client.h  client_impl.h  client_modelview.h  client_view.h  main_window.h
IP_tracker_client/include/interface/: main_widget.h  main_window.h
IP_tracker_client/include/view/: auth_widget.h  change_name_dialog.h  credentials_dialog.h  email_dialog.h  main_widget.h  main_window.h  rounded_item_delegate.h  validation_dialog.h
IP_tracker_client/resources/: styles.qss
IP_tracker_client/src/: auth_client_impl.cpp  client.cpp  client_impl.cpp  client_modelview.cpp  client_view.cpp  main_window.cpp
IP_tracker_client/src/interface/: main_widget.cpp  main_window.cpp
IP_tracker_client/src/view/: auth_widget.cpp  change_name_dialog.cpp  credentials_dialog.cpp  email_dialog.cpp  main_widget.cpp  main_window.cpp  validation_dialog.cpp
IP_tracker_client/tests/: CMakeLists.txt  login_test.cpp  main.cpp
IP_tracker_proto/: auth.proto  data.proto  ip_tracker.proto
IP_tracker_server/: CMakeLists.txt  DockerFile  Dockerfile  docker-compose.yml  main.cpp
IP_tracker_server/IP_tracker_proto/: ip_tracker.proto
IP_tracker_server/data/: data.txt
IP_tracker_server/database/: ip_tracker.db
IP_tracker_server/database/include/: sql_connector.h
IP_tracker_server/database/src/: sql_connector.cpp
IP_tracker_server/db_init/: 01-create-schema.sql  02-create-tables.sql  03-alter-user.sql
IP_tracker_server/include/: admin.h  auth_server_impl.h  data_parser.h  device.h  router.h  send_mail.h  server.h  server_impl.h
IP_tracker_server/include/mail_communication/: send_mail.h
IP_tracker_server/include/router_communication/: request_handler.h
IP_tracker_server/mail_communication/: send_mail.sh
IP_tracker_server/mail_communication/include/: send_mail.h
IP_tracker_server/mail_communication/src/: mail.txt  reset.txt  send_mail.cpp
IP_tracker_server/parser/include/: data_parser.h
IP_tracker_server/parser/src/: data_parser.cpp
IP_tracker_server/proto/: data.proto
IP_tracker_server/router_communication/include/: router.h  router_controller.h
IP_tracker_server/router_communication/src/: request_handler.cpp  router.cpp  router_controller.cpp
IP_tracker_server/server/include/: admin.h  devices_handler.h  server.h  server_controller.h
IP_tracker_server/server/src/: admin.cpp  server.cpp  server_controller.cpp
IP_tracker_server/src/: admin.cpp  auth_server_impl.cpp  data_parser.cpp  device.cpp  router.cpp  send_mail.cpp  send_mail.sh  server.cpp  server_impl.cpp
IP_tracker_server/src/mail_communication/: send_mail.cpp
IP_tracker_server/src/router_communication/: request_handler.cpp  router.cpp
IP_tracker_server/tests/: CMakeLists.txt  login_test.cpp  main.cpp  parser_test.cpp  router_controller_test.cpp  send_mail_test.cpp  service_test.cpp  sql_connector_test.cpp
IP_tracker_server/utils/: credentials.txt  data.txt  database.sh  mail.txt
